<resources>
    <string name="app_name">Sphinx_Project</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="logo">Sphinx</string>
    <string name="logo2">Project</string>
    <string name="theme">Be On Top Of Your Game</string>
    <string name="theme1">Timing is Everything</string>


    <string name="User">I Am a</string>
    <string name="admin">Admin</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="id">Roll Number Or Email Id</string>
    <string name="pwd">Password</string>
    <string name="login">Login</string>
    <string name="forget">Forget Password?</string>
    <string name="remember">Remember Me</string>


</resources>
