<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dell.sphinx_project.Main_activity">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="15dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/car" />

    <TextView
        android:textColor="@color/logo"
        android:id="@+id/textView5"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:text="@string/theme"
        android:textSize="23dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:textStyle="bold"
        android:id="@+id/textView4"
        android:textColor="@color/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/theme1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="21dp" />

    <TextView
        android:textStyle="bold"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:text="@string/logo2"
        android:layout_marginTop="6dp"
        android:textColor="@color/theme"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50dp" />


    <TextView
        android:textStyle="bold"
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/logo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/theme"
        android:textSize="50dp" />

</RelativeLayout>
